tests/ui/suggestions/suggest-deref-in-match-issue-132784.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:7:9
   |
LL |     match x {
   |           - this expression has type `Arc<Option<{integer}>>`
...
LL |         Some(_) => {}
   |         ^^^^^^^ expected `Arc<Option<{integer}>>`, found `Option<_>`
   |
   = note: expected struct `Arc<Option<{integer}>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match *x {
   |           +

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:9:9
   |
LL |     match x {
   |           - this expression has type `Arc<Option<{integer}>>`
...
LL |         None => {}
   |         ^^^^
   |         |
   |         expected `Arc<Option<{integer}>>`, found `Option<_>`
   |         `None` is interpreted as a unit variant, not a new binding
   |
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: unit variant defined here
   |
   = note: expected struct `Arc<Option<{integer}>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match *x {
   |           +
help: introduce a new binding instead
   |
LL -         None => {}
LL +         other_none => {}
   |

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:17:9
   |
LL |     match &x {
   |           -- this expression has type `&Arc<Option<{integer}>>`
...
LL |         Some(_) => {}
   |         ^^^^^^^ expected `Arc<Option<{integer}>>`, found `Option<_>`
   |
   = note: expected struct `Arc<Option<{integer}>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match &*x {
   |            +

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:19:9
   |
LL |     match &x {
   |           -- this expression has type `&Arc<Option<{integer}>>`
...
LL |         None => {}
   |         ^^^^
   |         |
   |         expected `Arc<Option<{integer}>>`, found `Option<_>`
   |         `None` is interpreted as a unit variant, not a new binding
   |
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: unit variant defined here
   |
   = note: expected struct `Arc<Option<{integer}>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match &*x {
   |            +
help: introduce a new binding instead
   |
LL -         None => {}
LL +         other_none => {}
   |

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:28:9
   |
LL |     match y {
   |           - this expression has type `Box<Option<{integer}>>`
...
LL |         Some(_) => {}
   |         ^^^^^^^ expected `Box<Option<{integer}>>`, found `Option<_>`
   |
   = note: expected struct `Box<Option<{integer}>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match *y {
   |           +

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:30:9
   |
LL |     match y {
   |           - this expression has type `Box<Option<{integer}>>`
...
LL |         None => {}
   |         ^^^^
   |         |
   |         expected `Box<Option<{integer}>>`, found `Option<_>`
   |         `None` is interpreted as a unit variant, not a new binding
   |
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: unit variant defined here
   |
   = note: expected struct `Box<Option<{integer}>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match *y {
   |           +
help: introduce a new binding instead
   |
LL -         None => {}
LL +         other_none => {}
   |

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:39:9
   |
LL |     match z as Arc<Option<i32>> {
   |           --------------------- this expression has type `Arc<Option<i32>>`
...
LL |         Some(_) => {}
   |         ^^^^^^^ expected `Arc<Option<i32>>`, found `Option<_>`
   |
   = note: expected struct `Arc<Option<i32>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL -     match z as Arc<Option<i32>> {
LL +     match *(z as Arc<Option<i32>>) {
   |

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:41:9
   |
LL |     match z as Arc<Option<i32>> {
   |           --------------------- this expression has type `Arc<Option<i32>>`
...
LL |         None => {}
   |         ^^^^
   |         |
   |         expected `Arc<Option<i32>>`, found `Option<_>`
   |         `None` is interpreted as a unit variant, not a new binding
   |
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: unit variant defined here
   |
   = note: expected struct `Arc<Option<i32>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL -     match z as Arc<Option<i32>> {
LL +     match *(z as Arc<Option<i32>>) {
   |
help: introduce a new binding instead
   |
LL -         None => {}
LL +         other_none => {}
   |

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:50:9
   |
LL |     match z_const {
   |           ------- this expression has type `&Arc<Option<i32>>`
...
LL |         Some(_) => {}
   |         ^^^^^^^ expected `Arc<Option<i32>>`, found `Option<_>`
   |
   = note: expected struct `Arc<Option<i32>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match &**z_const {
   |           +++

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:52:9
   |
LL |     match z_const {
   |           ------- this expression has type `&Arc<Option<i32>>`
...
LL |         None => {}
   |         ^^^^
   |         |
   |         expected `Arc<Option<i32>>`, found `Option<_>`
   |         `None` is interpreted as a unit variant, not a new binding
   |
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: unit variant defined here
   |
   = note: expected struct `Arc<Option<i32>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match &**z_const {
   |           +++
help: introduce a new binding instead
   |
LL -         None => {}
LL +         other_none => {}
   |

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:62:9
   |
LL |     match z_mut {
   |           ----- this expression has type `&mut Arc<Option<i32>>`
...
LL |         Some(_) => {}
   |         ^^^^^^^ expected `Arc<Option<i32>>`, found `Option<_>`
   |
   = note: expected struct `Arc<Option<i32>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match &**z_mut {
   |           +++

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:64:9
   |
LL |     match z_mut {
   |           ----- this expression has type `&mut Arc<Option<i32>>`
...
LL |         None => {}
   |         ^^^^
   |         |
   |         expected `Arc<Option<i32>>`, found `Option<_>`
   |         `None` is interpreted as a unit variant, not a new binding
   |
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: unit variant defined here
   |
   = note: expected struct `Arc<Option<i32>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match &**z_mut {
   |           +++
help: introduce a new binding instead
   |
LL -         None => {}
LL +         other_none => {}
   |

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:74:9
   |
LL |     match y_mut {
   |           ----- this expression has type `&mut Box<Option<i32>>`
...
LL |         Some(_) => {}
   |         ^^^^^^^ expected `Box<Option<i32>>`, found `Option<_>`
   |
   = note: expected struct `Box<Option<i32>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match &**y_mut {
   |           +++

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:76:9
   |
LL |     match y_mut {
   |           ----- this expression has type `&mut Box<Option<i32>>`
...
LL |         None => {}
   |         ^^^^
   |         |
   |         expected `Box<Option<i32>>`, found `Option<_>`
   |         `None` is interpreted as a unit variant, not a new binding
   |
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: unit variant defined here
   |
   = note: expected struct `Box<Option<i32>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match &**y_mut {
   |           +++
help: introduce a new binding instead
   |
LL -         None => {}
LL +         other_none => {}
   |

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:86:9
   |
LL |     match (& (&difficult)  ) {
   |           ------------------ this expression has type `&&Arc<Option<{integer}>>`
...
LL |         Some(_) => {}
   |         ^^^^^^^ expected `Arc<Option<{integer}>>`, found `Option<_>`
   |
   = note: expected struct `Arc<Option<{integer}>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL -     match (& (&difficult)  ) {
LL +     match &*difficult {
   |

error[E0308]: mismatched types
  --> $DIR/suggest-deref-in-match-issue-132784.rs:88:9
   |
LL |     match (& (&difficult)  ) {
   |           ------------------ this expression has type `&&Arc<Option<{integer}>>`
...
LL |         None => {}
   |         ^^^^
   |         |
   |         expected `Arc<Option<{integer}>>`, found `Option<_>`
   |         `None` is interpreted as a unit variant, not a new binding
   |
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: unit variant defined here
   |
   = note: expected struct `Arc<Option<{integer}>>`
                found enum `Option<_>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL -     match (& (&difficult)  ) {
LL +     match &*difficult {
   |
help: introduce a new binding instead
   |
LL -         None => {}
LL +         other_none => {}
   |

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0308`.
